# manapro

tender-analyzer/backend/: pyproject.toml
tender-analyzer/backend/src/: data_memory.json  dev.db  retrieval_temp.json  tool_calls_log.json
tender-analyzer/backend/src/tender_analyzer/apps/api_gateway/: main.py
tender-analyzer/backend/src/tender_analyzer/apps/evaluation/: service.py
tender-analyzer/backend/src/tender_analyzer/apps/ingestion/: service.py
tender-analyzer/backend/src/tender_analyzer/apps/orchestration/: service.py
tender-analyzer/backend/src/tender_analyzer/apps/qa_analysis/: answer_pipeline.py  demo_cv_search_llm.py  field_info.py  prebid_questions_1113.py  prebid_questions_labels_1128.py
tender-analyzer/backend/src/tender_analyzer/apps/qa_engine/: service.py
tender-analyzer/backend/src/tender_analyzer/cli/: backfill_embeddings.py  load_question_sets.py
tender-analyzer/backend/src/tender_analyzer/common/auth/: jwt.py  middleware.py  models.py  permissions.py  service.py  utils.py
tender-analyzer/backend/src/tender_analyzer/common/config/: settings.py
tender-analyzer/backend/src/tender_analyzer/common/db/: base.py  repositories.py  session.py
tender-analyzer/backend/src/tender_analyzer/common/state/: enums.py  state_machine.py
tender-analyzer/backend/src/tender_analyzer/common/utils/: ids.py
tender-analyzer/backend/src/tender_analyzer/domain/: dto.py  models.py  repositories.py  services.py
tender-analyzer/backend/src/tender_analyzer/scripts/: create_test_user.py
tender-analyzer/backend/tests/unit/: test_qdrant_vectorstore.py
(+267 files in other folders)
